--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently \"cd client && vite\" \"cd server && nodemon server\"",
-    "start": "cd server && node server",
-    "build": "cd client && vite build"
+    "start": "cd server && nodemon server",
+    "build": "cd client && vite build",
+    "reset": "cd server && cd config && node --require dotenv/config reset.js"
   },
   "dependencies": {
     "@picocss/pico": "^1.5.7",
+    "axios": "^1.5.0",
     "concurrently": "^7.6.0",
-    "dotenv": "^16.0.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22",
-    "pg": "^8.10.0",
+    "nodemon": "^3.1.7",
+    "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
